Fix layout bugs and update skills

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,8 +1,8 @@
 .container.contact__container {
-    width:58%;
+    width:60%;
     display: grid;
-    grid-template-columns: 30% 58%;
-    gap: 12%;
+    grid-template-columns: 38% 55%;
+    gap: 7%;
 }
 
 .contact__options {
